--- a/Assignment/notification-service/src/main/resources/application.yml
+++ b/Assignment/notification-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://database-2.cxm2eg0s4t4k.eu-north-1.rds.amazonaws.com:3306/test?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
     username: anish
-    password: anshu54321
+    password: #password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
